; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_mp3.c_audplay_config_hostpcm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_mp3.c_audplay_config_hostpcm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audio = type { i32 }
%struct.audplay_cmd_hpcm_buf_cfg = type { i32, i32, i32, i64, i64, i32 }

@.str = private unnamed_addr constant [26 x i8] c"audplay_config_hostpcm()\0A\00", align 1
@AUDPLAY_CMD_HPCM_BUF_CFG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.audio*)* @audplay_config_hostpcm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @audplay_config_hostpcm(%struct.audio* %0) #0 {
  %2 = alloca %struct.audio*, align 8
  %3 = alloca %struct.audplay_cmd_hpcm_buf_cfg, align 8
  store %struct.audio* %0, %struct.audio** %2, align 8
  %4 = call i32 @pr_info(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* @AUDPLAY_CMD_HPCM_BUF_CFG, align 4
  %6 = getelementptr inbounds %struct.audplay_cmd_hpcm_buf_cfg, %struct.audplay_cmd_hpcm_buf_cfg* %3, i32 0, i32 5
  store i32 %5, i32* %6, align 8
  %7 = getelementptr inbounds %struct.audplay_cmd_hpcm_buf_cfg, %struct.audplay_cmd_hpcm_buf_cfg* %3, i32 0, i32 0
  store i32 1, i32* %7, align 8
  %8 = getelementptr inbounds %struct.audplay_cmd_hpcm_buf_cfg, %struct.audplay_cmd_hpcm_buf_cfg* %3, i32 0, i32 4
  store i64 0, i64* %8, align 8
  %9 = getelementptr inbounds %struct.audplay_cmd_hpcm_buf_cfg, %struct.audplay_cmd_hpcm_buf_cfg* %3, i32 0, i32 1
  store i32 49152, i32* %9, align 4
  %10 = getelementptr inbounds %struct.audplay_cmd_hpcm_buf_cfg, %struct.audplay_cmd_hpcm_buf_cfg* %3, i32 0, i32 2
  store i32 1, i32* %10, align 8
  %11 = getelementptr inbounds %struct.audplay_cmd_hpcm_buf_cfg, %struct.audplay_cmd_hpcm_buf_cfg* %3, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = load %struct.audio*, %struct.audio** %2, align 8
  %13 = call i32 @audplay_send_queue0(%struct.audio* %12, %struct.audplay_cmd_hpcm_buf_cfg* %3, i32 40)
  ret void
}

declare dso_local i32 @pr_info(i8*) #1

declare dso_local i32 @audplay_send_queue0(%struct.audio*, %struct.audplay_cmd_hpcm_buf_cfg*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
